--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -50,22 +50,12 @@
             </pre-img>
           </div>
           <h2 class="greeting">תמונה בקרוב</h2>
-          <p class="message">ברוכים שבים</p>
+          <!--<p class="message">ברוכים שבים</p>-->
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.p1_appsLists">
           <i class="icon ion-document"></i>
           <h2 class="menu-text">רשימת אפליקציות</h2>
         </ion-item>
-        <!--
-        <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.layouts">
-          <i class="icon ion-wand"></i>
-          <h2 class="menu-text">שונות</h2>
-        </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close ng-click="showLogOutMenu()"  >
-          <i class="icon ion-gear-a"></i>
-          <h2 class="menu-text">התנתקות</h2>
-        </ion-item>
-        -->
       </ion-list>
 
     </ion-content>
