--- a/www/templates/p1_appsLists.html
+++ b/www/templates/p1_appsLists.html
@@ -1,26 +1,40 @@
 <ion-view class="feeds-categories-view " cache-view="false">
   <ion-nav-title>
-    <span>רשימת אפליקציות</span>
+    <span></span>
   </ion-nav-title>
   <ion-content class="pele-background">
     <ion-refresher pulling-text="משוך לרענון..." on-refresh="doRefresh()">
     </ion-refresher>
 
-    <div class="row row-top">
-      <img src="img/DocApprove/header_2.png" class="pele-img-size">
+    <div class="pele-page-title pele-img-size pele-page-title-font">
+      <a>רשימת אפליקציות</a>
     </div>
-
+    <!-- Source Version
     <div class="row categories-list">
       <div ng-repeat="category in feeds_categories.menuItems" class="col col-50" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)">
         <a class="feed-category" >
-          <pre-img ratio="_1_1" helper-class="square-image">
+          <pre-img ratio="_1_1" helper-class="square-image" class="app-button">
             <img class="category-image" ng-src="{{category.Image}}" spinner-on-load>
           </pre-img>
           <div class="category-bg"></div>
           <span class="category-title">{{category.DisplayName}}</span>
+
         </a>
       </div>
     </div>
+    -->
+    <div class="list pele-list category-feeds">
+      <a ng-repeat="category in feeds_categories.menuItems" class="pele-item item item-icon-right" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)">
+
+        <div class="app-button">
+          <!--<span class="title">{{source.MODULE_DESC}}</span>-->
+          <p class="description">{{category.DisplayName}}</p>
+        </div>
+
+      </a>
+    </div>
+
+
     <!--
 
     <div class="row row-bottom" ng-repeat="category in feeds_categories.menuItems">
