--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -1,4 +1,10 @@
-/* Empty. Add your own CSS if you like */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, i, u, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, fieldset, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    vertical-align: baseline;
+   }
+
 .disabled {cursor:none;background:#CCC;color:#eee;}
 
 .center-vertical {
@@ -88,17 +94,39 @@ span.tab{
    -- 20/10/2015  R.W.       Accordion Style
    -----------------------------------------------
 */
-.list .item.item-accordion {
+a.pele-item{
+    border:none;
+    background: transparent;
+    background-size: 100% !important;
+    background: url("../img/DocApprove/menu_button_grey.png") center;
+    background-repeat:no-repeat;
+    padding:0px;
+    margin: 10px 50px 10px 50px ;
+}
+a.pele-item :hover{
+    background: url("../img/DocApprove/menu_button_blue.png") center;
+    background-size: 100% !important;
+    background-repeat:no-repeat;
+
+}
+a.pele-item :focus{
+    background: url("../img/DocApprove/menu_button_blue.png") center;
+    background-size: 100% !important;
+    background-repeat:no-repeat;
+}
+
+.pele-list .item.item-accordion {
     line-height: 38px;
     padding-top: 0;
     padding-bottom: 0;
     transition: 0.09s all linear;
+
 }
-.list .item.item-accordion.ng-hide {
+.pele-list .item.item-accordion.ng-hide {
     line-height: 0px;
 }
-.list .item.item-accordion.ng-hide-add,
-.list .item.item-accordion.ng-hide-remove {
+.pele-list .item.item-accordion.ng-hide-add,
+.pele-list .item.item-accordion.ng-hide-remove {
     display: block !important;
 }
 div.login-form {
@@ -106,5 +134,44 @@ div.login-form {
   left: 0;
   right: 0;
   bottom: 0;
+}
+
+div.app-button{
+
+}
+
+
+p.description{
+    font-size: 24px !important;
+    color: black !important;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+    padding: 30px;
+}
+
+.row{padding: 0px !important; }
+/*----------------------------------------------------------------*/
+/* When        Who         Description                            */
+/* ==========  ==========  ====================================== */
+/* 24/12/2015  R.W.        Css for page Title                     */
+/*----------------------------------------------------------------*/
+.pele-page-title{
+  border:none;
+  background: transparent;
+  background-size: 100% !important;
+  background: url("../img/DocApprove/pele_header_1.png") center;
+  background-repeat:no-repeat;
+  padding: 10px;
+  text-align: center;
+}
+
+.pele-page-title-font{
+  font-size: 25px;
+  color: #000;
+
+}
+.pele-popup-positive_text-collot{
+  color:white;
 }
 
