--- a/www/css/tabSlideBox.css
+++ b/www/css/tabSlideBox.css
@@ -37,7 +37,7 @@
   display: inline-block;
   width: 54px;
   font-size: 2.5em;
-  color: #ccc;
+  color: #ddd;
   -webkit-transform:translate3d(0,8px,0);
 }
 
