--- a/www/templates/p1_appsLists.html
+++ b/www/templates/p1_appsLists.html
@@ -1,15 +1,15 @@
 <ion-view class="feeds-categories-view " cache-view="false">
   <ion-nav-title>
-    <span></span>
+    <span>רשימת אפליקציות</span>
   </ion-nav-title>
   <ion-content class="pele-background">
     <ion-refresher pulling-text="משוך לרענון..." on-refresh="doRefresh()">
     </ion-refresher>
 
-    <div class="pele-page-title pele-img-size pele-page-title-font">
-      <a>רשימת אפליקציות</a>
+    <div class="row row-top">
+      <img src="img/DocApprove/header_3.png" class="pele-img-size">
     </div>
-    <!-- Source Version
+
     <div class="row categories-list">
       <div ng-repeat="category in feeds_categories.menuItems" class="col col-50" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)">
         <a class="feed-category" >
@@ -18,46 +18,27 @@
           </pre-img>
           <div class="category-bg"></div>
           <span class="category-title">{{category.DisplayName}}</span>
-
         </a>
       </div>
     </div>
-    -->
     <!--
-    <div class="list pele-list category-feeds">
-      <a ng-repeat="category in feeds_categories.menuItems" class="pele-item item item-icon-right" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)">
 
-        <div class="app-button">
-          <p class="description">{{category.DisplayName}}</p>
-        </div>
-
-      </a>
-    </div>
-    -->
-    <div class="row row-bottom">
-      <div class="col"></div>
-    </div>
     <div class="row row-bottom" ng-repeat="category in feeds_categories.menuItems">
 
       <div class="row row-bottom " ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)">
         <div class="col col-10"></div>
-        <div class="col col-80 pele-item item item-icon-right">
-          <div class="row row-center">
-            <div class="col col-80">
-              <div class="app-button">
-                <p class="description">{{category.DisplayName}}</p>
-              </div>
-            </div>
-            <div class="col col-20">
-              <div class="app-button"  >
-                <img ng-src="{{category.Image}}" spinner-on-load class="float-right " style="max-width:100%;height:auto; vertical-align: middle" >
-              </div>
-            </div>
-          </div>
+        <div class="col col-80">
+            <button class="button button-block button-large button-stable">
+            <pre-img ratio="_1_1">
+              <img ng-src="img/DocApprove/menu_doc_icon.png" spinner-on-load class="float-right pele-img-size">
+            </pre-img>
+            <span class="pele-menu-title">{{category.DisplayName}}</span>
+            </button>
         </div>
         <div class="col col-10"></div>
       </div>
     </div>
+    -->
 
   </ion-content>
 </ion-view>
