--- a/www/templates/apps/docApprove/p2_moduleList.html
+++ b/www/templates/apps/docApprove/p2_moduleList.html
@@ -10,7 +10,7 @@
     <ion-refresher pulling-text="משוך לרענון..."  on-refresh="doRefresh()">
     </ion-refresher>
     <div class="pele-page-title pele-img-size pele-page-title-font">
-      <a>רשימת טפסים לאישור</a>
+      <a class="description">רשימת טפסים לאישור</a>
     </div>
     <div class="list category-feeds">
       <a ng-repeat="source in category_sources" class="pele-item item item-icon-right" ng-click="onClick(source.MODULE_NAME ,source.DOCUMENT_QTY )">
