--- a/www/templates/apps/docApprove/p3_moduleDocList.html
+++ b/www/templates/apps/docApprove/p3_moduleDocList.html
@@ -10,7 +10,7 @@
     <ion-refresher pulling-text="משוך לרענון..."  on-refresh="doRefresh()">
     </ion-refresher>
     <div class="pele-page-title pele-img-size pele-page-title-font">
-      <a>{{title}}</a>
+      <a class="description">{{title}}</a>
     </div>
     <label class="item item-input" dir="rtl" ng-click="searchBarCreteria()">
       <a class="button button-icon icon ion-search" ></a>
