--- a/www/templates/apps/docApprove/p4_doc_806.html
+++ b/www/templates/apps/docApprove/p4_doc_806.html
@@ -7,7 +7,7 @@
   </ion-nav-title>
   <ion-content scroll="false">
     <div class="pele-page-title pele-img-size pele-page-title-font">
-      <a>טופס דיווח עבודה מהבית</a>
+      <a class="description">טופס דיווח עבודה מהבית</a>
     </div>
     <tab-slide-box>
       <div class="tsb-icons">
