--- a/www/templates/p1_appsLists.html
+++ b/www/templates/p1_appsLists.html
@@ -37,11 +37,11 @@
     <div class="row row-bottom">
       <div class="col"></div>
     </div>
-    <div class="row row-bottom" ng-repeat="category in feeds_categories.menuItems">
+    <div class="row row-bottom" ng-repeat="category in feeds_categories.menuItems" ng-model="btn_class.on_release" on-touch="btn_class.on_release = !btn_class.on_release" on-release="btn_class.on_release = !btn_class.on_release">
 
-      <div class="row" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)">
+      <div class="row" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)" ng-show ="btn_class.on_release">
         <div class="col col-10"></div>
-        <div class="col col-80 pele-item item item-icon-right">
+        <div class="col col-80 pele-item-on-release item item-icon-right">
           <div class="row row-center">
               <a class="col col-80">
                   <p class="description">{{category.DisplayName}}</p>
@@ -53,6 +53,21 @@
         </div>
         <div class="col col-10"></div>
       </div>
+      <div class="row" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)" ng-show ="!btn_class.on_release">
+        <div class="col col-10"></div>
+        <div class="col col-80 pele-item-on-touch item item-icon-right">
+          <div class="row row-center">
+            <a class="col col-80">
+              <p class="description">{{category.DisplayName}}</p>
+            </a>
+            <a class="col col-20">
+              <img ng-src="{{category.Image}}" spinner-on-load class="float-right " style="max-width:100%;height:auto; vertical-align: middle" >
+            </a>
+          </div>
+        </div>
+        <div class="col col-10"></div>
+      </div>
+
     </div>
 
   </ion-content>
