button size changes in page 2

--- a/www/templates/apps/docApprove/p2_moduleList.html
+++ b/www/templates/apps/docApprove/p2_moduleList.html
@@ -12,20 +12,37 @@
     <div class="pele-page-title pele-img-size pele-page-title-font">
       <a class="description">רשימת טפסים לאישור</a>
     </div>
-    <div class="list category-feeds" ng-repeat="source in category_sources" ng-model="btn_class.on_release" on-touch="btn_class.on_release = !btn_class.on_release" on-release="btn_class.on_release = !btn_class.on_release">
 
-      <div  class="pele-item-on-release item item-icon-right" ng-click="onClick(source.MODULE_NAME ,source.DOCUMENT_QTY )" ng-show ="btn_class.on_release">
-        <div class="app-button">
-          <p class="description">({{source.DOCUMENT_QTY}})&nbsp;&nbsp;{{source.MODULE_DESC}}</p>
+    <div ng-repeat="source in category_sources" ng-model="btn_class.on_release" on-touch="btn_class.on_release = !btn_class.on_release" on-release="btn_class.on_release = !btn_class.on_release">
+      <div class="row" ng-show ="btn_class.on_release">
+        <div class="col col-10"></div>
+        <div class="col col-80 pele-item-on-release item item-icon-right" ng-click="onClick(source.MODULE_NAME ,source.DOCUMENT_QTY )">
+
+          <div class="app-button">
+            <p class="description">({{source.DOCUMENT_QTY}})&nbsp;&nbsp;{{source.MODULE_DESC}}</p>
+          </div>
         </div>
+        <div class="col col-10"></div>
       </div>
 
+      <div class="row" ng-show ="!btn_class.on_release">
+        <div class="col col-10"></div>
+        <div class="col col-80 pele-item-on-touch item item-icon-right" ng-click="onClick(source.MODULE_NAME ,source.DOCUMENT_QTY )">
+
+          <div class="app-button">
+            <p class="description">({{source.DOCUMENT_QTY}})&nbsp;&nbsp;{{source.MODULE_DESC}}</p>
+          </div>
+        </div>
+        <div class="col col-10"></div>
+      </div>
+
+      <!--
       <div class="pele-item-on-touch item item-icon-right" ng-click="onClick(source.MODULE_NAME ,source.DOCUMENT_QTY )" ng-show ="!btn_class.on_release">
         <div class="app-button">
           <p class="description">({{source.DOCUMENT_QTY}})&nbsp;&nbsp;{{source.MODULE_DESC}}</p>
         </div>
       </div>
-
+      -->
     </div>
   </ion-content>
 </ion-view>
