--- a/www/templates/apps/docApprove/p4_doc_807.html
+++ b/www/templates/apps/docApprove/p4_doc_807.html
@@ -3,7 +3,11 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <span></span>
+    <div class="bar bar-header bar-light">
+      <div class="title" id="logo">
+        <img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>
+      </div>
+    </div>
   </ion-nav-title>
   <ion-content scroll="false">
     <div class="pele-page-title pele-img-size pele-page-title-font">
@@ -19,6 +23,7 @@
         </div>
       </div>
       <ion-slide-box show-pager="false" on-slide-changed="slideHasChanged($index)">
+        <!-- -->
         <!-------------------------------------------------------------------------------->
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
@@ -39,7 +44,7 @@
             <!--<div class="item item-divider "> -->
             <a class="item item-divider item-icon-right">
               <i class="icon ion-android-contact"></i>
-              <p class="float-right">{{detail.USER_NAME}}</p>
+              <p class="text-right">{{detail.USER_NAME}}</p>
             </a>
             <!--</div>-->
             <label class="item" ng-hide="pelHideShow(detail.ACTION)">
