--- a/www/templates/p1_appsLists.html
+++ b/www/templates/p1_appsLists.html
@@ -1,6 +1,10 @@
 <ion-view class="feeds-categories-view " cache-view="false">
   <ion-nav-title>
-    <span></span>
+    <div class="bar bar-header bar-light">
+      <div class="title" id="logo">
+        <img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>
+      </div>
+    </div>
   </ion-nav-title>
   <ion-content class="pele-background">
     <ion-refresher pulling-text="משוך לרענון..." on-refresh="doRefresh()">
@@ -9,6 +13,7 @@
     <div class="pele-page-title pele-img-size pele-page-title-font">
       <a class="description">רשימת אפליקציות</a>
     </div>
+    <!-- -->
     <!-- Source Version
     <div class="row categories-list">
       <div ng-repeat="category in feeds_categories.menuItems" class="col col-50" ng-click="forwardToApp(category.Path, category.AppId , category.DisplayName)">
@@ -34,6 +39,7 @@
       </a>
     </div>
     -->
+    <!---->
     <div class="row row-bottom">
       <div class="col"></div>
     </div>
@@ -58,11 +64,11 @@
         <div class="col col-10"></div>
         <div class="col col-80 pele-item-on-touch item item-icon-right">
           <div class="row row-center">
-            <a class="col col-80">
-              <p class="description">{{category.DisplayName}}</p>
-            </a>
             <a class="col col-20">
               <img ng-src="{{category.Image}}" spinner-on-load class="float-right " style="max-width:100%;height:auto; vertical-align: middle" >
+            </a>
+            <a class="col col-80">
+              <p class="description">{{category.DisplayName}}</p>
             </a>
           </div>
         </div>
