--- a/www/templates/apps/docApprove/p4_doc_806.html
+++ b/www/templates/apps/docApprove/p4_doc_806.html
@@ -44,7 +44,7 @@
             <!--<div class="item item-divider "> -->
             <a class="item item-divider item-icon-right">
               <i class="icon ion-android-contact"></i>
-              <p class="float-right">{{detail.USER_NAME}}</p>
+              <p class="text-right">{{detail.USER_NAME}}</p>
             </a>
             <!--</div>-->
             <label class="item" ng-hide="pelHideShow(detail.ACTION)">
