--- a/www/css/tabSlideBox.css
+++ b/www/css/tabSlideBox.css
@@ -14,7 +14,7 @@
   background-color: #fff;
   text-align: center;
   font-weight: 300;
-  background-color: #BDECEC;
+  background-color: #fff;
 
 }
 
